# MapExplorer

./: .gitignore  README.md  com.potooFactory.eu.json  make.sh  meson.build  settings  tsoutput.geojson
data/: com.potooFactory.eu.desktop.in  com.potooFactory.eu.gschema.xml  com.potooFactory.eu.metainfo.xml.in
data/icons/: meson.build
data/ressources/Tests/: meson.build
data/ressources/Tests/1_Dijkstra/: README.md  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  output1.txt  output2.geojson  output2.txt  output3.geojson  output3.txt  output4.geojson  output4.txt  output5.geojson  output5.txt
data/ressources/Tests/2_Path_matrix/: README.md  input1.txt  input2.txt  input3.txt  input4.txt  output1.geojson  output1.txt  output1_full.txt  output2.geojson  output2.txt  output2_full.txt  output3.geojson  output3.txt  output3_full.txt  output4.geojson  output4.txt  (+1 more)
graph_visualisation/: .gitignore  graph_visualization.py  index.js  nodes.graph  package.json
graph_visualisation/public/: index.html
po/: POTFILES  meson.build
src/: BinaryHeap.c  BinaryHeap.h  CommandLine.c  CommandLine.h  DataPipeline.c  DataPipeline.h  Evolution.c  Evolution.h  FileParser.c  FileParser.h  Graph.c  Graph.h  ListInt.c  ListInt.h  Logger.c  Logger.h  MaxFlow.c  MaxFlow.h  SearchEngine.c  SearchEngine.h  SearchTrie.c  SearchTrie.h  Settings.h  ShortestPath.c  ShortestPath.h  SpatialMap.c  SpatialMap.h  TSPAlgorithm.c  TSPAlgorithm.h  Test.c  Test.h  TextUtils.c  TextUtils.h  Timer.c  Timer.h  a.out  main.c  meson.build  shumate-test-tile-source.c  tp-2a-s4-application.c  (+5 more)
(+25 files in other folders)
